Added name and email address

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="name">
         <!--TODO: Add your name and email address-->
         <h2 style="color:black">
-            Name: [Your Name Here]
+            Name: Jun Hao Xu <br /> junhaoxu13@hotmail.com
             <br />
         </h2>
     </div>
