--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
         <ul class="screenshots" align="center">
             <!--TODO: Replace image with screenshot(s) of your app. 
                 NOTE: To add more screenshots, copy the line <li><img....</li> and change the source-->
-            <li><img src="img/sample-app-screenshot.png" /></li>
+            <li><img src="img/Screenshot.png" /></li>
+	    <li><img src="img/Screenshot2.png" /></li>
+	    <li><img src="img/Screenshot3.png" /></li>
+  	    <li><img src="img/Screenshot4.png" /></li>
+
         </ul>
         <p><a href="#">Link to app source code</a></p>
         <p>Add description about your app such as features, who it is designed for, what you learnt etc...</p>
