Minor Adjustments to html, added link to git

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   	    <li><img src="img/Screenshot4.png" /></li>
 
         </ul>
-        <p><a href="#">Link to app source code>https://github.com/BlureX/BlockArena.git</a></p>
+        <p><a href="#">https://github.com/BlureX/BlockArena.git></a></p>
         <p><a href="BlocksArena.exe">https://github.com/BlureX/BlockArena.git</a></p>
         <p>Add description about your app such as features, who it is designed for, what you learnt etc...</p>
     </div>
