--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   	    <li><img src="img/Screenshot4.png" /></li>
 
         </ul>
-        <p><a href="#">https://github.com/BlureX/BlockArena.git</a></p>
-        <p><a href="BlocksArena.exe">https://github.com/BlureX/BlockArena.git</a></p>
+        <p><a href="https://github.com/BlureX/BlockArena">Link to source code</a></p>
+        <p><a href="BlocksArena.exe">The executable file to download</a></p>
         <p>Add description about your app such as features, who it is designed for, what you learnt etc...</p>
     </div>
 </body>
