--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         </ul>
         <p><a href="https://github.com/BlureX/BlockArena">Link to source code</a></p>
-        <p><a href="BlocksArena.exe">The executable file to download</a></p>
+        <p><a href="BlocksArena.zip">The zip files to download to access the game</a></p>
         <p>Add description about your app such as features, who it is designed for, what you learnt etc...</p>
     </div>
 </body>
