--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <h2 align="right" class="header-title">Microsoft Student Accelerator Phase 1</h2>
     </div>
     <div class="name">
-        <!--TODO: Add your name and email address-->
         <h2 style="color:black">
             Name: Jun Hao Xu <br /> junhaoxu13@hotmail.com
             <br />
@@ -25,8 +24,6 @@
     </div>
     <div class="windows-store-app">
         <ul class="screenshots" align="center">
-            <!--TODO: Replace image with screenshot(s) of your app. 
-                NOTE: To add more screenshots, copy the line <li><img....</li> and change the source-->
             <li><img src="img/Screenshot.png" /></li>
 	    <li><img src="img/Screenshot2.png" /></li>
 	    <li><img src="img/Screenshot3.png" /></li>
@@ -34,6 +31,7 @@
         </ul>
         <p><a href="https://github.com/BlureX/BlockArena">Link to source code</a></p>
         <p><a href="BlockArenaGame.zip">The zip files to download to access the game</a></p>
+	<p><a href="BlockArenaScriptFiles.zip">The zip files to download the scripts</a></p>
         <p>Add description about your app such as features, who it is designed for, what you learnt etc...</p>
     </div>
 </body>
