Changed website layout

--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
 	    <li><img src="img/Screenshot2.png" /></li>
 	    <li><img src="img/Screenshot3.png" /></li>
 
-        </ul>
+        </ul>	
+	</div>
+
+	<div class="grey-section">
         <p><a href="https://github.com/BlureX/BlockArena">Link to source code</a></p>
         <p><a href="BlockArenaGame.zip">The zip files to download to access the game</a></p>
 	<p><a href="BlockArenaScriptFiles.zip">The zip files to download the scripts</a></p>
-        <p>Add description about your app such as features, who it is designed for, what you learnt etc...</p>
+        <p>iption about your app such as features, who it is designed for, what you learnt etc...</p>
     </div>
 </body>
 </html>
