Modified website layout

--- a/index.html
+++ b/index.html
@@ -28,14 +28,40 @@
 	    <li><img src="img/Screenshot2.png" /></li>
 	    <li><img src="img/Screenshot3.png" /></li>
 
-        </ul>	
-	</div>
-
-	<div class="grey-section">
         <p><a href="https://github.com/BlureX/BlockArena">Link to source code</a></p>
         <p><a href="BlockArenaGame.zip">The zip files to download to access the game</a></p>
 	<p><a href="BlockArenaScriptFiles.zip">The zip files to download the scripts</a></p>
-        <p>iption about your app such as features, who it is designed for, what you learnt etc...</p>
+
+        </ul>	
+	</div>
+
+	<div class="description-section">
+	<h2>Description</h2>
+        <p>This is a 2 player split screen game which involves 2 players trying to kill each other.</p>
+	<p>Player 1 is located at the bottom of the screen and Player 2 is located at the top of the screen.</p>
+	<p>More than 5 weapons to use!</p>
+	<p>Every weapon has different stats such as damage and fire rate!</p>
+	<p>Kill the other player before they kill you!</p>
+
+	<h2>Instructions</h2>
+        <p>Player 1 is controlled by the w,a,s,d keys and uses space to shoot and left shift to sprint.</p>
+	<p>Player 2 is controlled by the arrow keys and uses m to shoot and right shift to sprint.</p>
+
+	<h2>Game</h2>
+        <p>Across the map there are some power ups. There are 2 different types of power ups.</p>
+	<p>Green cylinders indicate a speed boost while red ones slow down the character.</p>
+	<p>There are also purple circles located around the map which are teleporters. Players have to be directly on them to teleport.</p>
+	<p>Pick up weapons scattered around the map. You will never know what you get!</p>
+
+	<h2>Who is it designed for</h2>
+        <p>This game is designed for gamers who are interested in games similar to BoxHeads. It is also enjoyable for</p>
+	<p>people who are intersted in competing against their friends in a simple yet addictive shooting game.</p>
+
+	<h2>What I learnt</h2>
+        <p>I learnt how to use GIT, Unity, C-Sharp, How to publish to Azure and using HTML. </p>
+
+
+
     </div>
 </body>
 </html>
