Fixed minor typing errors and added a couple of lines to website

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 	<p>Player 2 is controlled by the arrow keys and uses m to shoot and right shift to sprint.</p>
 
 	<h2>Game</h2>
+	<p>On your player indicates the current ammo the player has, the health and the current weapon he is using.</p>
+	<p>Once a player has run out of ammo on a gun, he will go back to the default pistol.</p>
         <p>Across the map there are some power ups. There are 2 different types of power ups.</p>
 	<p>Green cylinders indicate a speed boost while red ones slow down the character.</p>
 	<p>There are also purple circles located around the map which are teleporters. Players have to be directly on them to teleport.</p>
@@ -58,7 +60,7 @@
 	<p>people who are intersted in competing against their friends in a simple yet addictive shooting game.</p>
 
 	<h2>What I learnt</h2>
-        <p>I learnt how to use GIT, Unity, C-Sharp, How to publish to Azure and using HTML. </p>
+        <p>I learnt how to use GIT, Unity, C-Sharp, how to publish to Azure and using HTML. </p>
 
 
 
